Let's speed things up

--- a/tox.ini
+++ b/tox.ini
@@ -25,7 +25,7 @@ deps =
     !t151-!t181: pydrobert-param>=0.4.0
 commands =
     !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    pytest --basetemp="{envtmpdir}" {posargs}
+    pytest --basetemp="{envtmpdir}" {posargs} -k test_beam_search_batch
     ; chunk-torch-spect-data-dir --help
     ; compute-mvn-stats-for-torch-feat-data-dir --help
     ; compute-torch-token-data-dir-error-rates --help
