--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -17,7 +17,7 @@ concurrency:
 jobs:
   test:
     name: Python ${{ matrix.py }}
-    runs-on: ubuntu-latest
+    runs-on: macosx-latest
     timeout-minutes: 10
     strategy:
       fail-fast: false
