--- a/tox.ini
+++ b/tox.ini
@@ -5,7 +5,7 @@ isolated_build = True
 [gh]
 python =
     3.7 = py37-t181
-    3.8 = py38-t181
+    3.8 = py38
     3.9 = py39
     3.10 = py310
     3.11 = py311
@@ -24,21 +24,21 @@ deps =
     !t151-!t181: pytorch-lightning
     !t151-!t181: pydrobert-param>=0.4.0
 commands =
+    chunk-torch-spect-data-dir --help
+    compute-mvn-stats-for-torch-feat-data-dir --help
+    compute-torch-token-data-dir-error-rates --help
+    ctm-to-torch-token-data-dir --help
+    get-torch-spect-data-dir-info --help
+    print-torch-ali-data-dir-length-moments --help
+    print-torch-ref-data-dir-length-moments --help
+    subset-torch-spect-data-dir --help
+    textgrids-to-torch-token-data-dir --help
+    torch-ali-data-dir-to-torch-token-data-dir --help
+    torch-spect-data-dir-to-wds --help
+    torch-token-data-dir-to-ctm --help
+    torch-token-data-dir-to-textgrids --help
+    torch-token-data-dir-to-torch-ali-data-dir --help
+    torch-token-data-dir-to-trn --help
+    trn-to-torch-token-data-dir --help
     !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     pytest --basetemp="{envtmpdir}" {posargs}
-    ; chunk-torch-spect-data-dir --help
-    ; compute-mvn-stats-for-torch-feat-data-dir --help
-    ; compute-torch-token-data-dir-error-rates --help
-    ; ctm-to-torch-token-data-dir --help
-    ; get-torch-spect-data-dir-info --help
-    ; print-torch-ali-data-dir-length-moments --help
-    ; print-torch-ref-data-dir-length-moments --help
-    ; subset-torch-spect-data-dir --help
-    ; textgrids-to-torch-token-data-dir --help
-    ; torch-ali-data-dir-to-torch-token-data-dir --help
-    ; torch-spect-data-dir-to-wds --help
-    ; torch-token-data-dir-to-ctm --help
-    ; torch-token-data-dir-to-textgrids --help
-    ; torch-token-data-dir-to-torch-ali-data-dir --help
-    ; torch-token-data-dir-to-trn --help
-    ; trn-to-torch-token-data-dir --help
