--- a/tox.ini
+++ b/tox.ini
@@ -13,7 +13,7 @@ python =
 [testenv]
 passenv =
     PYTORCH_JIT
-install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
+; install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
     webdataset
