You've probably got a memory leak

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,8 @@ isolated_build = True
 
 [gh]
 python =
-    3.7 = py37-t151
-    3.8 = py38-t181
+    3.7 = py37-t181
+    3.8 = py38
     3.9 = py39
     3.10 = py310
     3.11 = py311
@@ -13,7 +13,7 @@ python =
 [testenv]
 passenv =
     PYTORCH_JIT
-; install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
+install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
     webdataset
