one more try for the road

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ isolated_build = True
 
 [gh]
 python =
-    3.7 = py37-t181
+    3.7 = py37-t151
     3.8 = py38
     3.9 = py39
     3.10 = py310
@@ -13,6 +13,8 @@ python =
 [testenv]
 passenv =
     PYTORCH_JIT
+setenv =
+    OMP_NUM_THREADS = 1
 install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
