--- a/tox.ini
+++ b/tox.ini
@@ -20,7 +20,7 @@ deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
-    t151: torch==1.5.1
+    t151: torch==1.7.0
     t181: torch==1.8.1
     !t151-!t181: torch
     !t151-!t181: pytorch-lightning
@@ -43,4 +43,4 @@ commands =
     ; torch-token-data-dir-to-trn --help
     ; trn-to-torch-token-data-dir --help
     !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    pytest --basetemp="{envtmpdir}" {posargs} tests/test_training.py
+    pytest --basetemp="{envtmpdir}" {posargs}
