optimal completion loss batch?

--- a/tox.ini
+++ b/tox.ini
@@ -43,4 +43,4 @@ commands =
     ; torch-token-data-dir-to-trn --help
     ; trn-to-torch-token-data-dir --help
     !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    pytest --basetemp="{envtmpdir}" {posargs} tests/test_decoding.py
+    pytest --basetemp="{envtmpdir}" {posargs}
