--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py3{7,7-t170,7-t181,8,9,10,11}
+envlist = py3{7,5-t151,7-t170,7-t181,8,9,10,11}
 isolated_build = True
 
 [gh]
 python =
-    3.7 = py37-t170
+    3.7 = py37-t151, py37-t170
     3.8 = py38-t181
     3.9 = py39
     3.10 = py310
@@ -20,27 +20,28 @@ deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
+    t151: torch==1.5.1
     t170: torch==1.7.0
     t181: torch==1.8.1
     !t170-!t181: torch
     !t170-!t181: pytorch-lightning
     !t170-!t181: pydrobert-param>=0.4.0
 commands =
-    ; chunk-torch-spect-data-dir --help
-    ; compute-mvn-stats-for-torch-feat-data-dir --help
-    ; compute-torch-token-data-dir-error-rates --help
-    ; ctm-to-torch-token-data-dir --help
-    ; get-torch-spect-data-dir-info --help
-    ; print-torch-ali-data-dir-length-moments --help
-    ; print-torch-ref-data-dir-length-moments --help
-    ; subset-torch-spect-data-dir --help
-    ; textgrids-to-torch-token-data-dir --help
-    ; torch-ali-data-dir-to-torch-token-data-dir --help
-    ; torch-spect-data-dir-to-wds --help
-    ; torch-token-data-dir-to-ctm --help
-    ; torch-token-data-dir-to-textgrids --help
-    ; torch-token-data-dir-to-torch-ali-data-dir --help
-    ; torch-token-data-dir-to-trn --help
-    ; trn-to-torch-token-data-dir --help
+    chunk-torch-spect-data-dir --help
+    compute-mvn-stats-for-torch-feat-data-dir --help
+    compute-torch-token-data-dir-error-rates --help
+    ctm-to-torch-token-data-dir --help
+    get-torch-spect-data-dir-info --help
+    print-torch-ali-data-dir-length-moments --help
+    print-torch-ref-data-dir-length-moments --help
+    subset-torch-spect-data-dir --help
+    textgrids-to-torch-token-data-dir --help
+    torch-ali-data-dir-to-torch-token-data-dir --help
+    torch-spect-data-dir-to-wds --help
+    torch-token-data-dir-to-ctm --help
+    torch-token-data-dir-to-textgrids --help
+    torch-token-data-dir-to-torch-ali-data-dir --help
+    torch-token-data-dir-to-trn --help
+    trn-to-torch-token-data-dir --help
     !t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     pytest --basetemp="{envtmpdir}" {posargs}
