--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -24,13 +24,15 @@ jobs:
       matrix:
         py:
           - "3.11"
+          - "3.10"
+          - "3.9"
           - "3.8"
           - "3.7"
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup python for test ${{ matrix.py }}
+      - name: Setup python ${{ matrix.py }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py }}
@@ -39,4 +41,4 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: tox --skip-pkg-install
+        run: tox --skip-pkg-install -- -sv
