--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,20 @@
 [tox]
-envlist = py3{7,5-t151,7-t170,7-t181,8,9,10,11}
+envlist = py3{7,8,9,10,11}{,-t151,-t170,-t181}
 isolated_build = True
 
 [gh]
 python =
-    3.7 = py37-t151, py37-t170
-    3.8 = py38-t181
-    3.9 = py39
+    3.7 = py37-t151, py37
+    3.8 = py38-t170, py38
+    3.9 = py39-t181, py39
     3.10 = py310
     3.11 = py311
 
 [testenv]
 passenv =
     PYTORCH_JIT
-; setenv =
-;     OMP_NUM_THREADS = 1
+    LD_PRELOAD
+    OMP_NUM_THREADS
 install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
@@ -23,9 +23,9 @@ deps =
     t151: torch==1.5.1
     t170: torch==1.7.0
     t181: torch==1.8.1
-    !t170-!t181: torch
-    !t170-!t181: pytorch-lightning
-    !t170-!t181: pydrobert-param>=0.4.0
+    !t151-!t181: torch
+    !t151-!t181: pytorch-lightning
+    !t151-!t181: pydrobert-param>=0.4.0
 commands =
     chunk-torch-spect-data-dir --help
     compute-mvn-stats-for-torch-feat-data-dir --help
@@ -43,5 +43,6 @@ commands =
     torch-token-data-dir-to-torch-ali-data-dir --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    !t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    pytest --basetemp="{envtmpdir}" {posargs}
+    !t151-!t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
+    !t151: pytest --basetemp="{envtmpdir}" {posargs}
+    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs}
