Should be clear?

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ markers =
   gpu : tests are on the gpu
   trace : tests involve tracing code (TorchScript)
   script : tests involve scripting code (TorchScript)
+  nojit : tests could involve tracing or scripting, but these versions do not (TorchScript)
