--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py3{7,8,9,10,11}{,-t151,-t170,-t181}
+envlist = py3{7{,-t151,-t170,-t181},8{,-t170,-t181},9{,-t181},10,11}
 isolated_build = True
 
 [gh]
@@ -11,10 +11,8 @@ python =
     3.11 = py311
 
 [testenv]
-passenv =
-    PYTORCH_JIT
-    LD_PRELOAD
-    OMP_NUM_THREADS
+setenv =
+    t151: PYTORCH_JIT = 0
 install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
@@ -44,5 +42,6 @@ commands =
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
     !t151-!t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    !t151: pytest --basetemp="{envtmpdir}" {posargs}
-    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs}
+    !t151-!t170: pytest --basetemp="{envtmpdir}" {posargs}
+    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs}  ; scripting not supported (lots of malloc errors)
+    t170: pytest --basetemp="{envtmpdir}" -m 'not trace and not nojit' {posargs}  ; everything is scripted - no sense testing other versions
