--- a/tox.ini
+++ b/tox.ini
@@ -43,5 +43,5 @@ commands =
     trn-to-torch-token-data-dir --help
     !t151-!t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
     !t151-!t170: pytest --basetemp="{envtmpdir}" {posargs}
-    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs}  ; scripting not supported (lots of malloc errors)
-    t170: pytest --basetemp="{envtmpdir}" -m 'not trace and not nojit' {posargs}  ; everything is scripted - no sense testing other versions
+    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs} 
+    t170: pytest --basetemp="{envtmpdir}" -m 'not trace and not nojit' {posargs}
