--- a/.github/workflows/tox.yml
+++ b/.github/workflows/tox.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Setup test suite
         run: tox -vv --notest
       - name: Run test suite
-        run: tox --skip-pkg-install -- -sv tests/test_training.py
+        run: tox --skip-pkg-install -- -x tests/test_training.py
