SCPC updates n' fixes (#74)
* Fix some cuda test errors

* Change param of lightning datamodule; avoid warns

* Oops

* Fix

* add flag for suppress_uttids

* Quick flag update

* Oops

* Again!

* Do not serialize params object

* Some better argparse handling

* added subset-torch-spect-data-dir, test

* CLI rst

* initialize_set_parameters -> initialize_missing

* Text fix

* xfail and warning

* updated validate_spect_data_dir

* Redid some multiprocessing

* Oopsie-doopsie

* Minor

* torch-ali-data-dir-to-torch-token-data-dir, test

* Refactor

* print-torch-ref-data-dir-length-moments, test

* Added exclude-ids

* Add batch_size property

* Switch to masked_select

* Add symlink test

* Possible fix?

* Make test harder (hopefully)

* Maybe?

* ?

* formatting change

* Remove unused flag in torch-spect-data-dir-to-wds

* Added shallow fusion, tests

* renamed prob_list -> prob_dicts

* Validation + info simultaneously

* Is this bug still occurring?

* Try github workflow

* Why are you stalling?

* ...

* Was this the problem?

* Try?

* Are you the only problem?

* It's  probably you...

* Any better?

* Try this 1.5.1

* Keep try

* Try again

* Ugh

* Getting there

* Trying to avoid the malloc error

* Hnghhh

* Keep shrinking

* Try GRU?

* Does everything else work?

* Why do you hate meee

* I understand nothing

* Disable multiprocessing pool for a minute

* Maybe?

* Should fix the tests?

* Hurrah. Now go back to 3.7

* Gut?

* Do you hate fun?

* ...

* mallocs tho

* -_-

* mmm

* grr

* Let's speed things up

* Please

* Oops

* hiiii

* fart

* you don't seem to be even starting the next test

* aaaaaa

* Well let's just skip it

* Better on mac?

* windows?

* I hate everything you stand for

* I give up

* Cleanup; CHANGELOG

* Remove barrier

* ?

* Do you dislike the unused flag

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ console_scripts =
   compute-torch-token-data-dir-error-rates = pydrobert.torch.command_line:compute_torch_token_data_dir_error_rates
   ctm-to-torch-token-data-dir = pydrobert.torch.command_line:ctm_to_torch_token_data_dir
   get-torch-spect-data-dir-info = pydrobert.torch.command_line:get_torch_spect_data_dir_info
+  print-torch-ali-data-dir-length-moments = pydrobert.torch.command_line:print_torch_ali_data_dir_length_moments
+  print-torch-ref-data-dir-length-moments = pydrobert.torch.command_line:print_torch_ref_data_dir_length_moments
+  subset-torch-spect-data-dir = pydrobert.torch.command_line:subset_torch_spect_data_dir
   textgrids-to-torch-token-data-dir = pydrobert.torch.command_line:textgrids_to_torch_token_data_dir
   torch-ali-data-dir-to-torch-token-data-dir = pydrobert.torch.command_line:torch_ali_data_dir_to_torch_token_data_dir
   torch-spect-data-dir-to-wds = pydrobert.torch.command_line:torch_spect_data_dir_to_wds
