--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,27 @@
-# tox (https://tox.readthedocs.io/) is a tool for running tests
-# in multiple virtualenvs. This configuration file will run the
-# test suite on all supported python versions. To use it, "pip install tox"
-# and then run "tox" from this directory.
-
 [tox]
-envlist = py3{7-t151,8,9,10}
+envlist = py3{7{,-t151,-t170,-t181},8{,-t170,-t181},9{,-t181},10,11}
 isolated_build = True
-; requires =
-;     tox-ltt
+
+[gh]
+python =
+    3.7 = py37-t151
+    3.8 = py38-t170
+    3.9 = py39-t181
+    3.10 = py310
+    3.11 = py311
 
 [testenv]
-passenv =
-    PYTORCH_JIT
+setenv =
+    t151: PYTORCH_JIT = 0
+    OMP_NUM_THREADS = 1
+    MKL_NUM_THREADS = 1
 install_command = pip install --find-links https://download.pytorch.org/whl/cpu/torch_stable.html {opts} {packages}
 deps =
     pytest
     webdataset
     pydrobert-speech>=0.2.0
     t151: torch==1.5.1
+    t170: torch==1.7.0
     t181: torch==1.8.1
     !t151-!t181: torch
     !t151-!t181: pytorch-lightning
@@ -28,6 +32,9 @@ commands =
     compute-torch-token-data-dir-error-rates --help
     ctm-to-torch-token-data-dir --help
     get-torch-spect-data-dir-info --help
+    print-torch-ali-data-dir-length-moments --help
+    print-torch-ref-data-dir-length-moments --help
+    subset-torch-spect-data-dir --help
     textgrids-to-torch-token-data-dir --help
     torch-ali-data-dir-to-torch-token-data-dir --help
     torch-spect-data-dir-to-wds --help
@@ -36,5 +43,7 @@ commands =
     torch-token-data-dir-to-torch-ali-data-dir --help
     torch-token-data-dir-to-trn --help
     trn-to-torch-token-data-dir --help
-    !t151: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
-    pytest --basetemp="{envtmpdir}" {posargs}
+    !t151-!t170: python -c 'import pydrobert.torch.config as c; c.USE_JIT=True; from pydrobert.torch import *'
+    !t151-!t170: pytest --basetemp="{envtmpdir}" {posargs}
+    t151: pytest --basetemp="{envtmpdir}" -m 'not trace and not script' {posargs} 
+    t170: pytest --basetemp="{envtmpdir}" -m 'not trace and not nojit' {posargs}
